crates/css_lexer/tests/snapshots/postcss_snapshots__postcss_atrule_empty.snap
---
source: crates/css_lexer/tests/postcss_snapshots.rs
expression: tokens
---
[
  Token(
    kind: "AtKeyword",
    len: 8,
  ),
  Token(
    kind: "String",
    len: 7,
  ),
  Token(
    kind: "Semicolon",
    len: 1,
  ),
]
