crates/css_lexer/tests/snapshots/postcss_snapshots__postcss_atrule_no_semicolon.snap
---
source: crates/css_lexer/tests/postcss_snapshots.rs
expression: tokens
---
[
  Token(
    kind: "AtKeyword",
    len: 6,
  ),
  Token(
    kind: "Ident",
    len: 6,
  ),
  Token(
    kind: "LeftCurly",
    len: 1,
  ),
  Token(
    kind: "AtKeyword",
    len: 8,
  ),
  Token(
    kind: "RightCurly",
    len: 1,
  ),
  Token(
    kind: "AtKeyword",
    len: 8,
  ),
  Token(
    kind: "String",
    len: 7,
  ),
]
