crates/css_lexer/tests/snapshots/postcss_snapshots__postcss_atrule_params.snap
---
source: crates/css_lexer/tests/postcss_snapshots.rs
expression: tokens
---
[
  Token(
    kind: "AtKeyword",
    len: 14,
  ),
  Token(
    kind: "Function",
    len: 4,
  ),
  Token(
    kind: "String",
    len: 15,
  ),
  Token(
    kind: "RightParen",
    len: 1,
  ),
  Token(
    kind: "LeftCurly",
    len: 1,
  ),
  Token(
    kind: "RightCurly",
    len: 1,
  ),
]
