crates/css_lexer/tests/snapshots/postcss_snapshots__postcss_comments.snap
---
source: crates/css_lexer/tests/postcss_snapshots.rs
expression: tokens
---
[
  Token(
    kind: "Ident",
    len: 3,
  ),
  Token(
    kind: "LeftCurly",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 5,
  ),
  Token(
    kind: "Colon",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 5,
  ),
  Token(
    kind: "Semicolon",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 13,
  ),
  Token(
    kind: "Colon",
    len: 1,
  ),
  Token(
    kind: "Dimension",
    len: 3,
    unit: px,
  ),
  Token(
    kind: "Delim",
    len: 1,
  ),
  Token(
    kind: "Dimension",
    len: 3,
    unit: px,
  ),
  Token(
    kind: "RightCurly",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 1,
  ),
  Token(
    kind: "LeftCurly",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 5,
  ),
  Token(
    kind: "Colon",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 5,
  ),
  Token(
    kind: "Semicolon",
    len: 1,
  ),
  Token(
    kind: "RightCurly",
    len: 1,
  ),
  Token(
    kind: "Delim",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 2,
  ),
  Token(
    kind: "Ident",
    len: 4,
  ),
  Token(
    kind: "LeftCurly",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 5,
  ),
  Token(
    kind: "Colon",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 3,
  ),
  Token(
    kind: "LeftParen",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 8,
  ),
  Token(
    kind: "RightParen",
    len: 1,
  ),
  Token(
    kind: "Semicolon",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 11,
  ),
  Token(
    kind: "Colon",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 10,
  ),
  Token(
    kind: "Comma",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 5,
  ),
  Token(
    kind: "Semicolon",
    len: 1,
  ),
  Token(
    kind: "RightCurly",
    len: 1,
  ),
]
